Set up Desktop header
in this commit
- used media query to set up header for screen width more than 786px.
- removed hamburger icon from the header
- add anchor tags for portfolio, contact, about-me, and mail on the header
- styled header to fit accordingly

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <header class="container-header">
         <a id="name" href=""><img class="mylogo" src="/attributes/mylogo.png" /></a>
         <nav><img class="union" src="attributes/Union.png" alt="union_icon" /></nav>
+        <nav class="desktop_headicons">
+            <a class="header_btn" href="">Portfolio</a>
+            <a class="header_btn" href="#about_text">About</a>
+            <a class="header_btn" href="#full_name">Contact</a>
+            <a class="header_btn" href=""><img id="mail" src="/attributes/mail-icon.png" /></a>
+        </nav>
     </header>
     <section class="container-headline">
         <h3 id="greetings">Hey There. I'm Wahaj<h3>
