Set up Headline section for desktop version of Portfolio
in this commit
- added media query for headline section elements
- replaced the background image for desktop version
- set the fonts accordingly

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <section class="container-headline">
-        <h3 id="greetings">Hey There. I'm Wahaj<h3>
+        <h3 id="greetings">Hey There. I'm Wahaj</h3>
                 <p id="intro1">I am a Software Developer</p>
                 <p id="intro2">I can help you build a product , feature or website. Look through some of my work and
                     experience! If you like what you see and have a project you need coded,
