Set up Projects section for desktop version
in this commit
- modify works/projects section for desktop version of my portfolio
- styled index.html accordingly

--- a/index.html
+++ b/index.html
@@ -60,6 +60,85 @@
                 enable="disabled">See Project</button>
         </section>
     </section>
+
+<!-- desktop project section  -->
+    <section class="desktop_projects">
+        <section class="project">
+            <h3 class="project_descp1">Professional Art Printing Data</h3>
+            <p class="project_detail">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+                been the industry's standard</p>
+                <article class="lang_container_2">
+                    <ul style="list-style-type:none;" class="list">
+                        <li id="lang1">HTML</li>
+                        <li id="lang2">Bootstrap</li>
+                        <li id="lang3">Ruby</li>
+                    </ul>
+                </article>
+        </section>
+        <section class="project" id="prcjt2">
+            <h3 class="project_descp1">Data Dashboard Healthcare</h3>
+            <p class="project_detail">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+                been the industry's standard</p>
+                <article class="lang_container_2">
+                    <ul style="list-style-type:none;" class="list">
+                        <li id="lang1">HTML</li>
+                        <li id="lang2">Bootstrap</li>
+                        <li id="lang3">Ruby</li>
+                    </ul>
+                </article>
+        </section>
+        <section class="project" id="prcjt3">
+            <h3 class="project_descp1">Data Dashboard Healthcare</h3>
+            <p class="project_detail">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+                been the industry's standard</p>
+                <article class="lang_container_2">
+                    <ul style="list-style-type:none;" class="list">
+                        <li id="lang1">HTML</li>
+                        <li id="lang2">Bootstrap</li>
+                        <li id="lang3">Ruby</li>
+                    </ul>
+                </article>
+        </section>
+        <section class="project" id="prcjt4">
+            <h3 class="project_descp1">Data Dashboard Healthcare</h3>
+            <p class="project_detail">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+                been the industry's standard</p>
+                <article class="lang_container_2">
+                    <ul style="list-style-type:none;" class="list">
+                        <li id="lang1">HTML</li>
+                        <li id="lang2">Bootstrap</li>
+                        <li id="lang3">Ruby</li>
+                    </ul>
+                </article>
+        </section>
+        <section class="project" id="prcjt5">
+            <h3 class="project_descp1">Data Dashboard Healthcare</h3>
+            <p class="project_detail">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+                been the industry's standard</p>
+                <article class="lang_container_2">
+                    <ul style="list-style-type:none;" class="list">
+                        <li id="lang1">HTML</li>
+                        <li id="lang2">Bootstrap</li>
+                        <li id="lang3">Ruby</li>
+                    </ul>
+                </article>
+        </section>
+        <section class="project" id="prcjt6">
+            <h3 class="project_descp1">Data Dashboard Healthcare</h3>
+            <p class="project_detail">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+                been the industry's standard</p>
+                <article class="lang_container_2">
+                    <ul style="list-style-type:none;" class="list">
+                        <li id="lang1">HTML</li>
+                        <li id="lang2">Bootstrap</li>
+                        <li id="lang3">Ruby</li>
+                    </ul>
+                </article>
+        </section>
+    </section>
+
+
+<!-- mobile projects section  -->
     <section class="works">
         <h3 id="wors_descp">Professional Art Printing Data</h3>
         <p id="work_detail">A daily selection of privately personalized reads; no accounts or sign-ups required. has
@@ -144,6 +223,7 @@
         <button type="submit" class="checkout-button" id="projects-btn2" name="checkout-button" enable="disabled">See
             Project</button>
     </section>
+    <!-- mobile projects section end  -->
 
     <section class="about_me">
         <h2 id="about_text">About Me</h2>
