Set up "about me" and "Contact" sections for Desktop version of Portfolio
in this commit
- set up about me section for desktop version of portfolio
- set up contact section for desktop version of portfolio.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
 <!-- desktop project section  -->
-    <section class="desktop_projects">
+    <section class="desktop_projects" id="prcjt1">
         <section class="project">
             <h3 class="project_descp1">Professional Art Printing Data</h3>
             <p class="project_detail">A daily selection of privately personalized reads; no accounts or sign-ups required. has
@@ -235,10 +235,10 @@
         <hr id="divider">
         <section id="lang_sec">
             <img id="rect" src="/attributes/Rectangle 55.png" />
-            <p id="lang_use">Language</p>
+            <p class="lang_use">Language</p>
         </section>
 
-        <section id="artc_lang">
+        <section class="artc_lang">
             <ul style="list-style-type:none;">
                 <li class="lang_btn" id="langbtn1">Javascript</li>
                 <li class="lang_btn" id="langbtn2">Ruby</li>
@@ -249,9 +249,9 @@
 
         <section id="fram_sec">
             <img id="sqr" src="/attributes/Rectangle 55.png" />
-            <p id="lang_use">Frameworks</p>
+            <p class="lang_use">Frameworks</p>
         </section>
-        <section id="framework_sec">
+        <section class="artc_lang" id="framework_sec">
             <ul style="list-style-type:none;">
                 <li class="lang_btn" id="frambtn1">Bootstrap</li>
                 <li class="lang_btn" id="frambtn2">Ruby on Rails</li>
@@ -263,9 +263,9 @@
 
         <section id="skill">
             <img id="circle" src="/attributes/Circle.png" />
-            <p id="lang_use">Skills</p>
+            <p class="lang_use" >Skills</p>
         </section>
-        <section id="skills_sec">
+        <section class="artc_lang" id="skills_sec">
             <ul style="list-style-type:none;">
                 <li class="lang_btn" id="skillbtn1">Codekit</li>
                 <li class="lang_btn" id="skillbtn2">Github</li>
