--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
     <header class="container-header">
         <a id="name" href=""><img class="mylogo" src="/attributes/mylogo.png" /></a>
-        <nav><img class="union" src="attributes/Union.png" alt="union_icon" /></nav>
+        <nav><img class="union" src="attributes/union.png" alt="union_icon" /></nav>
         <nav class="desktop_headicons">
             <a class="header_btn" href="">Portfolio</a>
             <a class="header_btn" href="#about_text">About</a>
             <a class="header_btn" href="#full_name">Contact</a>
-            <a class="header_btn" href=""><img id="mail" src="/attributes/mail-icon.png" /></a>
+            <a class="header_btn" href=""><img id="mail" src="/attributes/mailicon.png" /></a>
         </nav>
     </header>
     <section class="container-headline">
@@ -32,18 +32,18 @@
                 <ul class="contacts">
                     <li><a href="https://www.linkedin.com/in/wahaj-ali-82b9b1164/"><img id="linkedin_btn"
                                 src="attributes/linkedin.png" alt="linkedin" /></a></li>
-                    <li><a href="https://twitter.com/Ali96Wahaj"><img id="twitter_btn" src="attributes/Twitter.png"
+                    <li><a href="https://twitter.com/Ali96Wahaj"><img id="twitter_btn" src="attributes/twitter.png"
                                 alt="Twitter" /></a></li>
-                    <li><a href=""><img id="vector_btn" src="attributes/Vector.png" alt="vector" /></a></li>
-                    <li><a href=""><img id="m_btn" src="/attributes/M.png" alt="M" /></a></li>
-                    <li><a href=""><img id="en_btn" src="/attributes/En.png" alt="En" /></a></li>
+                    <li><a href=""><img id="vector_btn" src="attributes/vector.png" alt="vector" /></a></li>
+                    <li><a href=""><img id="m_btn" src="/attributes/m.png" alt="M" /></a></li>
+                    <li><a href=""><img id="en_btn" src="/attributes/en.png" alt="En" /></a></li>
                 </ul>
     </section>
     <section class="container-works">
         <h3 id="works_heading">My Recent Works</h3>
         <hr class="solid">
         <section class="projects">
-            <img class="works_image" src="/attributes/Img Placeholder@3x.png" />
+            <img class="works_image" src="/attributes/workimage.png" />
             <h4 id="multi_heading">Multi-post Stories</h4>
             <p id="works_intro">A daily selection of privately personalized reads; no accounts or sign-ups required. has
                 been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard
@@ -157,7 +157,7 @@
             Resume</button>
         <hr id="divider">
         <section id="lang_sec">
-            <img id="rect" src="/attributes/Rectangle 55.png" />
+            <img id="rect" src="/attributes/rectangle.png" />
             <p class="lang_use">Language</p>
         </section>
 
@@ -171,7 +171,7 @@
         </section>
 
         <section id="fram_sec">
-            <img id="sqr" src="/attributes/Rectangle 55.png" />
+            <img id="sqr" src="/attributes/rectangle.png" />
             <p class="lang_use">Frameworks</p>
         </section>
         <section class="artc_lang" id="framework_sec">
@@ -185,7 +185,7 @@
         </section>
 
         <section id="skill">
-            <img id="circle" src="/attributes/Circle.png" />
+            <img id="circle" src="/attributes/circle.png" />
             <p class="lang_use" >Skills</p>
         </section>
         <section class="artc_lang" id="skills_sec">
@@ -216,11 +216,11 @@
     <ul class="contacts" id="end" style="list-style-type:none;" >
         <li><a href="https://www.linkedin.com/in/wahaj-ali-82b9b1164/"><img id="linkedin_btn"
                     src="attributes/linkedin_2.png" alt="linkedin" /></a></li>
-        <li><a href="https://twitter.com/Ali96Wahaj"><img id="twitter_btn" src="attributes/Twitter_2.png"
+        <li><a href="https://twitter.com/Ali96Wahaj"><img id="twitter_btn" src="attributes/twitter_2.png"
                     alt="Twitter" /></a></li>
-        <li><a href=""><img id="vector_btn" src="attributes/Vector (2).png" alt="vector" /></a></li>
-        <li><a href=""><img id="m_btn" src="/attributes/M-2.png" alt="M" /></a></li>
-        <li><a href=""><img id="en_btn" src="/attributes/En-2.png" alt="En" /></a></li>
+        <li><a href=""><img id="vector_btn" src="attributes/vector2.png" alt="vector" /></a></li>
+        <li><a href=""><img id="m_btn" src="/attributes/m-2.png" alt="M" /></a></li>
+        <li><a href=""><img id="en_btn" src="/attributes/en2.png" alt="En" /></a></li>
     </ul>
 </body>
 
